--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@
     font-family: Arial;
     border: border-box;
 }
-body{
-    text-align: center;
-}
 .navbar{
     height: 60px;
     background-color: #0f1111;
@@ -85,6 +82,10 @@ body{
 .span{
     font-size: 0.6rem;
 }
+.nav-signin a{
+    text-decoration: none; 
+    color: white;
+}
 .nav-2{
     font-size: 1rem;
     font-weight: 750;
@@ -97,50 +98,137 @@ body{
     font-size: 1rem;
     font-weight: 700;
 }
+/* panel */
+.panel{
+    background-color: #222f3d;
+    height: 40px;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.panel-ops p{
+    display: inline;
+    margin-left: 25px;
+}
+.panel-ops{
+    width: 80%;
+    font-size: 0.9rem;
+   
+}
+.panel-ops a{
+    text-decoration: none;
+    color: white;
+}
+.panel-deals{
+    font-size: 1rem;
+    font-weight: 700;
+}
+/* hero-section */
+.hero-section{
+    background-image: url("hero.jpg");
+    background-size:cover ;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end; 
+}
+.hero-msg{
+    background-color: white;
+    color: #0f1111;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    width: 80%;
+    margin-bottom: 25px;
+}
+.hero-msg a{
+    color: #007185;
+}
+/* shop-section */
+.shop-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: rgba(244, 233, 168, 0.587);
+}
 .box{
     border:2px solid black; 
-    height: 500px;
-    width: 93%;
+    height: 400px;
+    width: 23%;
     background-color: white;
     padding: 20px 0px 15px;
     margin-top: 15px;
 }
 .box-img{
-    height: 500px;
-    background-repeat: no-repeat;
+    height: 300px;
     background-size: contain;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
-.boxs{
+.box-cont{
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+.box-cont p{
+    color:#05353e;
+}
+/* footer */
+footer{
+    margin-top: 15px;
+}
+.foot-panel1{
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+}
+.foot-panel2{
+    background-color: #222f3d;
+    color: white;
+    height: 500px;
+    display: flex;
+    justify-content: space-evenly;
+}
+ul{
+    margin-top: 20px;
+}
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #dddddd;
+}
+.foot-panel3{
+    background-color:  #222f3d;
+    color: #cccccc;
+    border-top: 0.5px solid white;
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.head-line{
-    margin-left: 100px;
-    margin-right: 100px;
-    font-size:20px;
-    font-weight:bolder;
-    text-decoration: solid #0f1111;
+.logo{
+    background-image: url("amazon_logo.png");
+    background-size:cover ;
+    height: 50px;
+    width: 100px;
 }
-.star{
-    background-color: #febd68;
+.foot-panel4{
+    background-color: #0f1111;
+    color: white;
+    height: 80px;
+    text-align: center;
+    font-size: 0.7rem;
 }
-.head-line p{
-    margin-top: 20px;
+.pages{
+    padding-top: 25px;
 }
-button{
-    width: 400px;
-    border-radius:4px 4px 4px 4px ;
-    background-color: #febd68;
-}
-.buy{
-    font-size: large;
-    font-weight: 400;
-    margin-bottom: 20px;
-}
-.add{
-    font-size: large;
-    font-weight: 400;
+.copy-right{
+    padding-top: 5px;
 }
